--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -15,17 +15,15 @@
   </div>
   {{/if}}
 </div>
-<p>Rol: {{#if user.admin}}Administrador{{else}}Usuario{{/if}}</p>
-<p>Visit : {{this.visit}}</p>
+<p>Rol: {{#if isAdmin}}Administrador{{else}}Usuario{{/if}}</p>
+<p>Visit : {{visit}}</p>
 <div>
   <h3>eliminando la Cuenta</h3>
   <form action="/api/user/logout" method="get">
     <button type="submit">clearSession</button>
   </form>
-
 </div>
-
-{{#if user.admin }}ADMIN
+{{#if isAdmin}}
 <div class="container h-100">
   <div class="row h-100">
     <div class="col-md-4 my-auto">
@@ -38,8 +36,8 @@
             required>
         </div>
         <div class="form-group">
-          <label for="title">descripcion:</label>
-          <input type="text" id="description" name="description" placeholder="Escribe el titulo"
+          <label for="description">Descripción:</label>
+          <input type="text" id="description" name="description" placeholder="Escribe la descripción"
             class="form-control rounded-0 mb-1" required>
         </div>
         <div class="form-group">
@@ -96,9 +94,9 @@
         </div>
       </div>
     </div>
-
   </div>
-{{else}}Usuario{{/if}}
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/index.js"></script>
+</div>
+{{/if}}
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/js/index.js"></script>
