--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -81,11 +81,11 @@
           <div>
             <div class="card card-body rounded-2 mb-2 animate__animated animate__fadeInUp background">
               <div class="d-flex justify-content-between">
-                <h1 class="h3 card-title">{{this.title}}</h1>
-                <p class="h5">${{this.price}}</p>
+                <h1 class="h3 card-title">{{title}}</h1>
+                <p class="h5">${{price}}</p>
               </div>
-              <p>{{this.description}}</p>
-              <img src="{{this.thumbnails}}" alt="Product Image" class="image">
+              <p>{{description}}</p>
+              <img src="{{thumbnails}}" alt="Product Image" class="image">
             </div>
           </div>
           {{else}}
