FIx: Fix product In CartUser.handlebars

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -14,6 +14,7 @@
   <a href="/products">Ir a administrar los productos</a>
   {{else}}
   <a href="/chat">Ir a enviar mensajes al chat</a>
+  <a href="/cartsuser">Ir a ver mi carrito</a>
 <h1>{{firstName}} {{lastName}}</h1>
 {{/if}}
   </div>
