--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/{{style}}">
     <title>{{title}}</title>
 </head>
-    <body class="container h-100  ">
+    <body>
 
         {{{body}}}
     </body>
