🚀 Added: added  uuid to schema model: Initializing user cart view with Handlebars and purchase ticket creation

--- a/src/views/cartsuser.handlebars
+++ b/src/views/cartsuser.handlebars
@@ -34,7 +34,8 @@
             </div>
         </div>
         <div class="col-md-5 py-3 overflow-auto h-80" data-cart-id="{{cId}}">
-            {{#each productsInCart}}
+            {{#each cartsOfUser}}
+            <div>hola</div>
             {{else}}
             <p>No Agregaste ningun producto a tu carrito </p>
             {{/each}}
