--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,30 +1,43 @@
-body{
+body {
   height: 100vh;
 }
-p{
-  
+
+p {
+
   color: red;
 }
 
-img{
+img {
   width: 4em;
   height: 4em;
 }
 
 
-.max-heigth{
+.max-heigth {
   max-height: 100vh;
 }
 
-.background{
+.background {
   background: hsla(141, 54%, 86%, 1);
   background: linear-gradient(0deg, hsla(141, 54%, 86%, 1) 0%, hsla(333, 73%, 85%, 1) 50%, hsla(211, 58%, 79%, 1) 100%);
   background: -moz-linear-gradient(0deg, hsla(141, 54%, 86%, 1) 0%, hsla(333, 73%, 85%, 1) 50%, hsla(211, 58%, 79%, 1) 100%);
   background: -webkit-linear-gradient(0deg, hsla(141, 54%, 86%, 1) 0%, hsla(333, 73%, 85%, 1) 50%, hsla(211, 58%, 79%, 1) 100%);
-  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#CAEFD7", endColorstr="#F5BFD7", GradientType=1 );
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#CAEFD7", endColorstr="#F5BFD7", GradientType=1);
 }
 
 
 .h-80 {
   max-height: 80vh;
+}
+
+.max-width {
+  max-width: 100vw;
+}
+
+.background-2 {
+  background: rgb(253, 29, 29);
+  background: -moz-linear-gradient(180deg, rgba(253, 29, 29, 1) 5%, rgba(252, 176, 69, 1) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(253, 29, 29, 1) 5%, rgba(252, 176, 69, 1) 100%);
+  background: linear-gradient(180deg, rgba(253, 29, 29, 1) 5%, rgba(252, 176, 69, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fd1d1d", endColorstr="#fcb045", GradientType=1);
 }
