🚀 Added:" visualized stock in handlebar admin view"

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -84,6 +84,7 @@
                 <h1 class="h3 card-title">{{title}}</h1>
                 <p class="h5">${{price}}</p>
               </div>
+                <p class="h5">STOCK {{stock}}</p>
               <p>{{description}}</p>
               <img src="{{thumbnails}}" alt="Product Image" class="image">
             </div>
