--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -13,8 +13,10 @@
   <div>{{#if isAdmin}}
   <a href="/products">Ir a administrar los productos</a>
   {{else}}
-  <a href="/chat">Ir a enviar mensajes al chat</a>
+  <div>
+  <a href="/chat">Ir a enviar mensajes al chat</a> <br>
   <a href="/cartsuser">Ir a ver mi carrito</a>
+  </div>
 <h1>{{firstName}} {{lastName}}</h1>
 {{/if}}
   </div>
