🚀 Initialized: Third Practice Integration Class 37 Nodemailer, Email Recovery

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -14,7 +14,7 @@
     </form>
   </div>
   <div> <a href="/register"><button>Register</button></a></div>
-  <div> <a href="/recover">Restaurar contraseña</a></div>
+  <div> <a href="/emailwithrecover">Restaurar contraseña</a></div>
 
   <div>
     <br>
