🌈 Change : separate session to user

--- a/src/views/checkyouremail.handlebars
+++ b/src/views/checkyouremail.handlebars
@@ -5,6 +5,6 @@
 
   <div>
     <br>
-    <a href="/api/user/github"> <button type="submit">Entrar con GITHUB</button></a>
+    <a href="/api/session/github"> <button type="submit">Entrar con GITHUB</button></a>
   </div>
 </div>
