--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -5,7 +5,7 @@
   <p>Email: {{email}}</p>
   <p>ROL: {{role}}</p>
   <div>
-    <form action="/api/user/logout" method="get">
+    <form action="/api/session/logout" method="get">
       <br />
       <button type="submit">Cerrar sesión</button>
     </form>
