--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -57,7 +57,8 @@
         </div>
         <div class="form-group">
           <label for="image">Imagen:</label>
-          <input type="file" id="image" name="image" accept="image/*" class="form-control rounded-0 mb-1" required>
+          <input type="file" id="image" name="productImage" accept="image/*" class="form-control rounded-0 mb-1" required>
+
         </div>
         <button class="btn btn-dark rounded-0">Enviar</button>
       </form>
