🚀 Added:  fourth ntegrative practice

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -23,7 +23,8 @@
       {{else}}
       <div>
         <a href="/chat">Ir a enviar mensajes al chat</a> <br>
-        <a href="/cartsuser">Ir a ver mi carrito</a>
+        <a href="/cartsuser">Ir a ver mi carrito</a><br>
+        <a href="/completeprofile">Completar Perfil</a>
       </div>
       <h1>{{firstName}} {{lastName}}</h1>
       {{/if}}
