🚀 Added: view Delete USER

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -12,22 +12,24 @@
   </div>
   <div>
     {{#if isAdmin}}
-    <a href="/products">Ir a administrar los productos</a>
+    <a href="/products">Ir a administrar los productos</a> <br>
+    <a href="/usermanagement">Ir a administrar a los diferentes usuarios</a>
     {{else}}
-      {{#if isPremium}}
-      <a href="/products">Ir a administrar los productos</a>
-      <div>
-        <a href="/chat">Ir a enviar mensajes al chat</a> <br>
-        <a href="/cartsuser">Ir a ver mi carrito</a>
-      </div>
-      {{else}}
-      <div>
-        <a href="/chat">Ir a enviar mensajes al chat</a> <br>
-        <a href="/cartsuser">Ir a ver mi carrito</a><br>
-        <a href="/completeprofile">Completar Perfil</a>
-      </div>
-      <h1>{{firstName}} {{lastName}}</h1>
-      {{/if}}
+    {{#if isPremium}}
+    <a href="/products">Ir a administrar los productos</a>
+
+    <div>
+      <a href="/chat">Ir a enviar mensajes al chat</a> <br>
+      <a href="/cartsuser">Ir a ver mi carrito</a>
+    </div>
+    {{else}}
+    <div>
+      <a href="/chat">Ir a enviar mensajes al chat</a> <br>
+      <a href="/cartsuser">Ir a ver mi carrito</a><br>
+      <a href="/completeprofile">Completar Perfil</a>
+    </div>
+    <h1>{{firstName}} {{lastName}}</h1>
+    {{/if}}
     {{/if}}
   </div>
 </div>
