--- a/src/views/usermanagement.handlebars
+++ b/src/views/usermanagement.handlebars
@@ -18,6 +18,8 @@
                                 <p class="h5">{{email}}</p>
                                 <div>
                                     <h2>Rol : {{role}} </h2>
+                                    <button class="btn btn-warning btn-rol-user" data-user-id="{{id}}"
+                                    style="border: 1px solid black; font-size: 12px;">Cambiar rol</button>
                                 </div>
                             </div>
                         </div>
